--- a/portfolio.html
+++ b/portfolio.html
@@ -29,13 +29,15 @@
 
           <ul class="site-nav list">
             <li class="address-item">
-              <a href="./index.html" class="link">Studio</a>
+              <a href="./index.html" class="header-line-link link">Studio</a>
             </li>
             <li class="address-item">
-              <a href="./portfolio.html" class="link">Portfolio</a>
+              <a href="./portfolio.html" class="header-line-link link current"
+                >Portfolio</a
+              >
             </li>
             <li class="address-item">
-              <a href="" class="link">Contacts</a>
+              <a href="" class="header-line-link link">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -82,13 +84,22 @@
 
           <ul class="list work-list">
             <li class="project-card">
-              <a href="" class="link prodject-link"
-                ><img
-                  src="./images/filter-maket/img-5.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                  class="all-img"
-                />
+              <a href="" class="link prodject-link">
+                <div class="team-box">
+                  <img
+                    src="./images/filter-maket/img-5.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                    class="all-img"
+                  />
+                  <div class="overlay">
+                    <p class="team-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="work-box">
                   <h2 class="title">Banking App Interface Concept</h2>
                   <p class="text">App</p>
@@ -96,28 +107,45 @@
               </a>
             </li>
             <li class="project-card">
-              <a href="" class="link prodject-link"
-                ><img
-                  src="./images/filter-maket/img-6.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  class="all-img"
-                />
+              <a href="" class="link prodject-link">
+                <div class="team-box">
+                  <img
+                    src="./images/filter-maket/img-6.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    class="all-img"
+                  />
+                  <div class="overlay">
+                    <p class="team-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="work-box">
                   <h2 class="title">Cashless Payment</h2>
                   <p class="text">Marketing</p>
                 </div>
               </a>
             </li>
-
             <li class="project-card">
-              <a href="" class="link prodject-link"
-                ><img
-                  src="./images/filter-maket/img-7.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  class="all-img"
-                />
+              <a href="" class="link prodject-link">
+                <div class="team-box">
+                  <img
+                    src="./images/filter-maket/img-7.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    class="all-img"
+                  />
+                  <div class="overlay">
+                    <p class="team-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="work-box">
                   <h2 class="title">Meditation App</h2>
                   <p class="text">App</p>
@@ -125,13 +153,22 @@
               </a>
             </li>
             <li class="project-card">
-              <a href="" class="link prodject-link"
-                ><img
-                  src="./images/filter-maket/img-8.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  class="all-img"
-                />
+              <a href="" class="link prodject-link">
+                <div class="team-box">
+                  <img
+                    src="./images/filter-maket/img-8.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    class="all-img"
+                  />
+                  <div class="overlay">
+                    <p class="team-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="work-box">
                   <h2 class="title">Taxi Service</h2>
                   <p class="text">Marketing</p>
@@ -139,13 +176,22 @@
               </a>
             </li>
             <li class="project-card">
-              <a href="" class="link prodject-link"
-                ><img
-                  src="./images/filter-maket/img-9.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  class="all-img"
-                />
+              <a href="" class="link prodject-link">
+                <div class="team-box">
+                  <img
+                    src="./images/filter-maket/img-9.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    class="all-img"
+                  />
+                  <div class="overlay">
+                    <p class="team-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="work-box">
                   <h2 class="title">Screen Illustrations</h2>
                   <p class="text">Design</p>
@@ -153,13 +199,22 @@
               </a>
             </li>
             <li class="project-card">
-              <a href="" class="link prodject-link"
-                ><img
-                  src="./images/filter-maket/img-10.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  class="all-img"
-                />
+              <a href="" class="link prodject-link">
+                <div class="team-box">
+                  <img
+                    src="./images/filter-maket/img-10.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    class="all-img"
+                  />
+                  <div class="overlay">
+                    <p class="team-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="work-box">
                   <h2 class="title">Online Courses</h2>
                   <p class="text">Marketing</p>
@@ -168,13 +223,22 @@
             </li>
 
             <li class="project-card">
-              <a href="" class="link prodject-link"
-                ><img
-                  src="./images/filter-maket/img-11.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                  class="all-img"
-                />
+              <a href="" class="link prodject-link">
+                <div class="team-box">
+                  <img
+                    src="./images/filter-maket/img-11.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    class="all-img"
+                  />
+                  <div class="overlay">
+                    <p class="team-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="work-box">
                   <h2 class="title">Instagram Stories Concept</h2>
                   <p class="text">Design</p>
@@ -182,13 +246,22 @@
               </a>
             </li>
             <li class="project-card">
-              <a href="" class="link prodject-link"
-                ><img
-                  src="./images/filter-maket/img-12.jpg"
-                  alt="Organic Food"
-                  width="360"
-                  class="all-img"
-                />
+              <a href="" class="link prodject-link">
+                <div class="team-box">
+                  <img
+                    src="./images/filter-maket/img-12.jpg"
+                    alt="Organic Food"
+                    width="360"
+                    class="all-img"
+                  />
+                  <div class="overlay">
+                    <p class="team-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="work-box">
                   <h2 class="title">Organic Food</h2>
                   <p class="text">Web Site</p>
@@ -196,13 +269,22 @@
               </a>
             </li>
             <li class="project-card">
-              <a href="" class="link prodject-link"
-                ><img
-                  src="./images/filter-maket/img-13.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                  class="all-img"
-                />
+              <a href="" class="link prodject-link">
+                <div class="team-box">
+                  <img
+                    src="./images/filter-maket/img-13.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                    class="all-img"
+                  />
+                  <div class="overlay">
+                    <p class="team-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="work-box">
                   <h2 class="title">Fresh Coffee</h2>
                   <p class="text">Web Site</p>
